--- a/package.json
+++ b/package.json
@@ -16,9 +16,5 @@
     "url": "https://github.com/katwlodarczyk/com518/issues"
   },
   "homepage": "https://github.com/katwlodarczyk/com518#readme",
-  "devDependencies": {
-    "autoprefixer": "^10.2.5",
-    "postcss": "^8.2.8",
-    "tailwindcss": "^2.0.4"
-  }
+  "devDependencies": {}
 }
