--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {},
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "izitoast": "^1.4.0"
   }
