--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +23,9 @@
     "@fortawesome/fontawesome-free": "^5.15.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "izitoast": "^1.4.0"
+    "express": "^4.17.1",
+    "izitoast": "^1.4.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.7"
   }
 }
