--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-mysql-session": "^2.1.5",
+    "express-session": "^1.17.1",
     "izitoast": "^1.4.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
